gcc/testsuite/algol68/compile/error-upper-1.a68
# { dg-options {-fstropping=supper} }  #

BEGIN ~ END # { dg-error "" }  #
